--- a/covid/templates/covid/index.html
+++ b/covid/templates/covid/index.html
@@ -1,74 +1,9 @@
-{% load bootstrap4 %}
-{% load static %}
+{% extends "covid/base.html" %}
 
-{# Load CSS and JavaScript #}
-{% bootstrap_css %}
-{% bootstrap_javascript jquery='full' %}
-<!DOCTYPE html>
-<html lang="en">
+{% block subtag %} Covid Top Countries Charts {% endblock %}
 
-<head>
-
-    <title>Data Dashboard</title>
-    <!--import script files needed from plotly and bootstrap-->
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-
-</head>
-
-<body>
-
-<!--navbar links-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-    <a class="navbar-brand" href="#">Data Dashboard</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse"
-            data-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02" aria-expanded="false"
-            aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-            <li class="nav-item">
-                <a class="nav-link" href="https://covid-19-apis.postman.com/">Covid 19 API</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'covid_history' %}">Covid Evolution</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-<!--middle section-->
-<div class="row">
-
-    <!--social media buttons column-->
-    <div class="col-1 border-right">
-        <div id="follow-me" class="mt-3">
-            <a href="https://www.linkedin.com/in/lee-hodgkinson1/">
-                <img src="{% static 'covid/imgs/linkedinlogo.png' %}" alt="linkedin" class="img-fluid mb-4 ml-2">
-            </a>
-            <a href="https://github.com/lee-hodg">
-                <img src="{% static 'covid/imgs/githublogo.png' %}" alt="github" class="img-fluid ml-2">
-            </a>
-        </div>
-    </div>
-
-    <!--visualizations column-->
-    <div class="col-11">
-
-        <!--chart descriptions-->
-        <div id="middle-info" class="mt-3">
-
-            <h2 id="tag-line">Covid Data Dashboard</h2>
-            <h4 id="sub-tag-line" class="text-muted">Top Countries by various metrics</h4>
-
-        </div>
-
-        <!--charts-->
-        <div id="charts" class="container mt-3 text-center">
-
-            <!--top two charts-->
+{% block charts %}
+ <!--top two charts-->
             <div class="row">
                 <div class="col-6">
                     <div id="{{ids.0}}"></div>
@@ -105,32 +40,6 @@
                 </div>
             </div>
 
-        </div>
-        <div>
-        </div>
+{% endblock %}
 
-        <!--footer section-->
-        <div id="footer" class="container"></div>
-
-</body>
-
-
-<footer>
-
-    <script type="text/javascript">
-        // plots the figure with id
-        // id much match the div id above in the html
-        var figures = {{ figuresJSON | safe }};
-        var ids = {{ ids | safe }};
-        for(var i in figures) {
-            Plotly.plot(ids[i],
-                figures[i].data,
-                figures[i].layout || {});
-        }
-    </script>
-
-</footer>
-
-
-</html>
 
